[package]
name = "telegram-bot"
version = "0.6.1"
authors = ["Lukas Kalbertodt <lukas.kalbertodt@gmail.com>", "Fedor Gogolev <knsd@knsd.net>"]

description = "A library for creating Telegram bots"

documentation = "https://docs.rs/telegram-bot/"
repository = "https://github.com/telegram-rs/telegram-bot"
readme = "../README.md"

keywords = ["telegram", "bot", "chat", "api"]
categories = ["api-bindings", "asynchronous"]
license = "MIT"

[dependencies]
tokio = "0.1.7"
error-chain = "0.11.0"
futures = "0.1"

telegram-bot-raw = { version = "=0.6.1", path = "../raw" }

[dependencies.hyper]
version = "0.12"

[dependencies.http]
version = "0.1.5"

[dependencies.hyper-tls]
version = "0.2"

